# typegraph_std

./: .gitignore  .pre-commit-config.yaml  README.md  google.txt  pyproject.toml  pyvenv.cfg  ruff.toml
.github/: pr-title-check.yml
.github/workflows/: pr-title-check.yml  tests.yml
dev/: generate.py
dev/generators/: generator_script.py  github.py  google.py  stripe.py
dev/tools/: util.py
generators/: generator_script.py  google.py
typegraph_core/google/: fcm.py  mybusiness.py
typegraph_std/github/: __init__.py  ghes.py  ghes.pyi  github.py  github.pyi
typegraph_std/google/: __init__.py  abusiveexperiencereport.py  abusiveexperiencereport.pyi  acceleratedmobilepageurl.py  acceleratedmobilepageurl.pyi  accessapproval.py  accessapproval.pyi  accesscontextmanager.py  accesscontextmanager.pyi  acmedns.py  acmedns.pyi  adexchangebuyer2.py  adexchangebuyer2.pyi  adexperiencereport.py  adexperiencereport.pyi  admin.py  admin.pyi  admob.py  admob.pyi  adsense.py  adsense.pyi  adsensehost.py  adsensehost.pyi  advisorynotifications.py  advisorynotifications.pyi  alertcenter.py  alertcenter.pyi  analytics.py  analytics.pyi  analyticsadmin.py  analyticsadmin.pyi  analyticsdata.py  analyticsdata.pyi  analyticshub.py  analyticshub.pyi  analyticsreporting.py  analyticsreporting.pyi  androiddeviceprovisioning.py  androiddeviceprovisioning.pyi  androidenterprise.py  (+482 more)
typegraph_std/stripe/: __init__.py  spec3.py  spec3.pyi  spec3_sdk.py  spec3_sdk.pyi
typegraphs/google/: abusiveexperiencereport.py  docs.py  fcm.py  mybusiness.py  sheets.py  slides.py
